feat: enhance user authentication flow with Face ID integration
- Added localized strings for Face ID prompts in Localizable.xcstrings to support English and Brazilian Portuguese.
- Refactored DataMigrationManager to implement a global migration check and improve user data handling.
- Updated LoginViewController and RegisterViewController to offer Face ID setup for new users and preserve existing settings during registration.
- Enhanced SplashViewController to prompt users for Face ID setup based on their saved preferences.
- Improved error handling and user feedback for biometric authentication processes.

--- a/FinanceApp/Resources/Localizable.xcstrings
+++ b/FinanceApp/Resources/Localizable.xcstrings
@@ -1310,6 +1310,91 @@
         }
       }
     },
+    "faceid.reason" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Use Face ID to access your financial data securely"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Use o Face ID para acessar seus dados financeiros com segurança"
+          }
+        }
+      }
+    },
+    "faceid.enable.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enable %@?"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Habilitar %@?"
+          }
+        }
+      }
+    },
+    "faceid.enable.message" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Would you like to enable %@ for quick and secure access to your account?"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Gostaria de habilitar %@ para acesso rápido e seguro à sua conta?"
+          }
+        }
+      }
+    },
+    "faceid.enable.button" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enable %@"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Habilitar %@"
+          }
+        }
+      }
+    },
+    "skip" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skip"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pular"
+          }
+        }
+      }
+    },
     "input.confirmPassword" : {
       "extractionState" : "manual",
       "localizations" : {
