feat: add face id switch button

--- a/Finova/Resources/Localizable.xcstrings
+++ b/Finova/Resources/Localizable.xcstrings
@@ -2993,6 +2993,23 @@
         }
       }
     },
+    "settings.section.security" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Security"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Segurança"
+          }
+        }
+      }
+    },
     "skip" : {
       "extractionState" : "manual",
       "localizations" : {
