fix: notifications dispatch

--- a/Finova/Resources/Localizable.xcstrings
+++ b/Finova/Resources/Localizable.xcstrings
@@ -2789,6 +2789,176 @@
         }
       }
     },
+    "notification.installment.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installment Payment Due"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pagamento de Parcela Vencendo"
+          }
+        }
+      }
+    },
+    "notification.installment.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You have %d installment(s) due this month totaling %@"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Você tem %d parcela(s) vencendo este mês totalizando %@"
+          }
+        }
+      }
+    },
+    "notification.installment.reminder.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Installment Reminder"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lembrete de Parcela"
+          }
+        }
+      }
+    },
+    "notification.installment.reminder.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You have upcoming installment payments. Open the app to see details."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Você tem pagamentos de parcelas próximos. Abra o app para ver detalhes."
+          }
+        }
+      }
+    },
+    "notification.recurring.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Recurring Transaction Due"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Transação Recorrente Vencendo"
+          }
+        }
+      }
+    },
+    "notification.recurring.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You have %d recurring transaction(s) due this month totaling %@"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Você tem %d transação(ões) recorrente(s) vencendo este mês totalizando %@"
+          }
+        }
+      }
+    },
+    "notification.recurring.reminder.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Recurring Transaction Reminder"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lembrete de Transação Recorrente"
+          }
+        }
+      }
+    },
+    "notification.recurring.reminder.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You have upcoming recurring transactions. Open the app to see details."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Você tem transações recorrentes próximas. Abra o app para ver detalhes."
+          }
+        }
+      }
+    },
+    "notification.transaction.reminder.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Transaction Reminder"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lembrete de Transação"
+          }
+        }
+      }
+    },
+    "notification.transaction.reminder.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You have upcoming transactions. Open the app to see details."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Você tem transações próximas. Abra o app para ver detalhes."
+          }
+        }
+      }
+    },
     "password.mustContain" : {
       "extractionState" : "manual",
       "localizations" : {
